--- a/Servers_paralel/Views/Shared/_Layout.cshtml
+++ b/Servers_paralel/Views/Shared/_Layout.cshtml
@@ -25,8 +25,18 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Make Task", "MakeTask", "Home")</li>
+
+                        @if (!User.Identity.IsAuthenticated)
+                        {
+                            <li>@Html.ActionLink("Log in", "Login", "Home")</li>
+                            <li>@Html.ActionLink("Register", "Register", "Home")</li>
+                        }
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li>@Html.ActionLink("Log off", "Logoff", "Home")</li>
+                        }
+
                     </ul>
                 </div>
             </div>
@@ -39,9 +49,9 @@
             <hr />
 
 
-            <footer> 
+            <footer>
                 <p>
-                   Copyright © @DateTime.Now.Year Pasternak Andrii
+                    Copyright © @DateTime.Now.Year Pasternak Andrii
                 </p>
             </footer>
         </div>
