--- a/Servers_paralel/Views/Shared/_Layout.cshtml
+++ b/Servers_paralel/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("Home", "Index", "Home")</li>
                         <li>@Html.ActionLink("Make Task", "MakeTask", "Home")</li>
+                        <li>@Html.ActionLink("Show Tasks", "ShowTasks", "Home")</li>
 
                         @if (!User.Identity.IsAuthenticated)
                         {
